<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wordpress.logitopia.ifindher.LoginActivity">


    <EditText
        android:id="@+id/loginUserNameid"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/HintUserName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginPasswordid"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUserNameid"
        android:hint="@string/HintPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButtonid"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPasswordid"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginButtonid"
        android:layout_marginTop="10dp"
        android:onClick="loginButtonClick"/>

    <android.widget.Space
        android:id="@+id/spaceid"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/loginButtonid" />

    <Button
        android:id="@+id/signupButtonid"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spaceid"
        android:text="@string/SignupButtonId"
        android:onClick="signUpClick"/>


</RelativeLayout>
