<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@id/loginUserNameid"
        android:hint="@string/HintUserName"
        android:layout_marginTop="164dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/loginEmailid"
        android:hint="@string/HintEmail"
        android:layout_below="@id/loginUserNameid"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@id/loginPasswordid"
        android:hint="@string/HintPassword"
        android:layout_below="@id/loginEmailid"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/loginPasswordVerifyid"
        android:hint="@string/HintPassword"
        android:layout_below="@id/loginPasswordid"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPasswordVerifyid"
        android:text="@string/SignupButtonId"
        android:layout_centerHorizontal="true"
        android:id="@id/signupButtonid"
        android:onClick="signUpClick"/>


</RelativeLayout>